# pywatchdog

./: README.md  example.py  example.service  setup.cfg
pywatchdog/: __init__.py  __main__.py  ioctl.py  watchdog.py
