[metadata]
name = pywatchdog
url = https://github.com/AT0myks/pywatchdog
version = 1.0.0
author = AT0myks
author_email = at0myks.dev@gmail.com
description = Interact with a Linux watchdog driver using Python.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = watchdog
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Monitoring
project_urls =
    Bug Reports = https://github.com/AT0myks/pywatchdog/issues
    Source = https://github.com/AT0myks/pywatchdog

[options]
packages = pywatchdog
python_requires = >=3.7

[options.entry_points]
console_scripts =
    pywatchdog = pywatchdog.__main__:main

[flake8]
max-line-length = 88
select = B, C, E, F, W, B950
extend-ignore = E203, E501, W503
